# ChemLearn--LabOS

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATIONS.md  COMPLIANCE_CHECKLIST.md  DEVELOPMENT_GUIDE.md  Dockerfile  Makefile  README.md  VALIDATION_LOG.md  app.py  compliance-notes.md  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  requirements.base.txt  requirements.txt  sitecustomize.py
.archive/: README.md  docker-compose.yml  docker-run.ps1  docker-run.sh
chemlearn_labos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chemlearn_modules/: __init__.py  _init_.py
data/: README.md  capabilities.json  interactions.json
docs/: AGENT_GLOBAL_INSTRUCTIONS.md  AUDIT_LOG_FORMAT.md  BINARY_ASSET_HANDLING.md  BOT_PERMISSIONS_MATRIX.md  CAPABILITIES_REGISTRY.md  CHANGE_TYPES.md  CLINICAL_BOUNDARY_MODE.md  CLI_API_PARITY.md  COMPLIANCE_CHECKLIST.md  COMPLIANCE_OVERVIEW.md  CURRENT_CAPABILITIES.md  ChemLearn-The-Universal-Chemistry-Learning-and-Discovery-Engine.md  DATA_ARCHITECTURE.md  DEVELOPMENT_VISION_GUIDE.md  DOC_STANDARDS.md  EXPERIMENT_SCHEMA.md  FEEDBACK_AND_TELEMETRY.md  FUTURE_DISCOVERIES_PIPELINE.md  GETTING_STARTED.md  INTERACTIONS_GRAPH.md  INVARIANTS.md  JOB_SCHEMA.md  MASTER_BLUEPRINT_INDEX.md  METHOD_AND_DATA.md  ML_UPGRADE_PLAN.md  MODES.md  MODULARITY_GUIDELINES.md  MODULE_REGISTRATION_STANDARDS.md  ORG_CHEM_DESIGN_MODULE.md  PACKAGING_NOTES.md  PHASES_OVERVIEW.md  PHASE_2_5_4_COMPLETION.md  PHASE_2_5_4_PLAN.md  PHASE_TRANSITION_RULES.md  PHYSICS_FOUNDATION.md  PROTEOMICS_MODULE_PLAN.md  PROVENANCE_GUIDE.md  README_ARCHITECTURE.md  REFERENCES.md  REPO_HEALTH_CHECKLIST.md  (+25 more)
labos/: __init__.py  ai.py  audit.py  cli.py  config.py  datasets.py  experiments.py  jobs.py  runtime.py  storage.py
scripts/: create_demo_video.py  docker-run.sh  start_labos.sh  verify-local.ps1  verify.ps1
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  sitecustomize.py  test_advanced_spectroscopy.py  test_api_adapters_stubs.py  test_api_internal_integration_workflows.py  test_api_internal_wrappers.py  test_audit_stress_log.py  test_chromatography.py  test_cli_commands.py  test_cli_integration_workflows.py  test_compliance_validation.py  test_computational_chemistry.py  test_core_objects.py  test_core_placeholders.py  test_data_fixtures_demo_calorimetry.py  test_dataset_versioning.py  test_ei_ms_basic_analysis.py  test_electrochemistry.py  test_error_propagation.py  test_experiment_state_machine.py  test_import_calorimetry.py  test_import_provenance.py  test_import_wizard_calorimetry.py  test_integration_workflows_pipeline.py  test_ir_analysis.py  test_isotope_patterns.py  test_job_retry.py  test_kinetics.py  test_labos_core.py  test_metabolomics.py  test_ml.py  test_modularity_imports.py  test_module_registry.py  (+37 more)
(+180 files in other folders)
