[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chemlearn-labos"
version = "0.1.0"
description = "ChemLearn LabOS core scaffolding"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ChemLearn Swarm", email = "labs@chemlearn.example"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "colorama>=0.4.6",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.10,<5",
    "packaging>=24.2,<25",
    "pytest>=9.0,<10",
    "streamlit>=1.39.0,<2",
]

[project.scripts]
labos = "labos.cli:main"
scanner = "scanner.cli:main"

[tool.setuptools]
packages = ["labos", "labos.core", "labos.modules", "scanner", "scanner.backends"]
package-dir = {"" = ".", "scanner" = "src/scanner"}

[tool.setuptools.package-data]
scanner = ["py.typed"]
